--- a/src/main/resources/templates/pwStudent.html
+++ b/src/main/resources/templates/pwStudent.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
     />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body
     class="font-[Poppins] flex w-full justify-center items-center bg-sky-100 mt-10"
@@ -21,6 +22,28 @@
       th:switch="${pws}"
       class="ml-64 relative flex flex-col w-11/12 p-5 m-10 justify-center items-center"
     >
+      <button
+        class="absolute top-1 left-5 px-2 py-1 rounded font-semibold text-blue-800 bg-indigo-300 hover:bg-blue-500 flex items-center"
+        onclick="showModal()"
+      >
+        <svg
+          class="w-[16px] h-[16px]"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 18 16"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M1 1v14h16m0-9-3-2-3 5-3-2-3 4"
+          />
+        </svg>
+        <span class="ml-2">Voir le graphe d'apprentissage</span>
+      </button>
+
       <div th:case="*" class="w-full text-center">
         <h2
           class="text-2xl font-semibold my-8 w-full py-2 bg-blue-200 rounded-lg text-blue-800 shadow-2xl"
@@ -80,24 +103,121 @@
         <p>Pas de TP réalisé par cet étudiant(e)</p>
       </div>
     </div>
-  </body>
-  <script>
-    function updateNote(student, pw) {
-      var noteInput = document.getElementById("note");
-      var note = noteInput.value.trim();
 
-      if (note !== "") {
-        // Note is not empty, proceed with the update
-        window.location.href =
-          "http://localhost:8080/prof/student/pws/" +
-          note +
-          "/" +
-          student +
-          "/" +
-          pw;
-      } else {
-        alert("Please enter a valid note before updating.");
+    <!-- Chart modal -->
+    <div
+      id="chartModal"
+      tabindex="-1"
+      aria-hidden="true"
+      class="overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 flex justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full backdrop-blur-sm"
+      style="display: none"
+    >
+      <div class="relative p-4 w-full max-w-2xl max-h-full mx-auto">
+        <!-- Modal content -->
+        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+          <!-- Modal header -->
+          <div
+            class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600"
+          >
+            <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+              <span
+                th:text="' Le graphe d\'apprentissage de ' + ${student.firstName} + ' ' +${student.lastName}"
+              ></span>
+            </h3>
+            <button
+              type="button"
+              class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+              data-modal-hide="default-modal"
+              onclick="hideModal()"
+            >
+              <svg
+                class="w-3 h-3"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 14 14"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+                />
+              </svg>
+              <span class="sr-only">Close modal</span>
+            </button>
+          </div>
+          <!-- Modal body -->
+          <div class="p-4 md:p-5 space-y-4">
+            <canvas id="myChart" class="w-full"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script th:inline="javascript">
+      function updateNote(student, pw) {
+        var noteInput = document.getElementById("note");
+        var note = noteInput.value.trim();
+
+        if (note !== "") {
+          // Note is not empty, proceed with the update
+          window.location.href =
+            "http://localhost:8080/prof/student/pws/" +
+            note +
+            "/" +
+            student +
+            "/" +
+            pw;
+        } else {
+          alert("Please enter a valid note before updating.");
+        }
       }
-    }
-  </script>
+
+      function hideModal() {
+        var modal = document.getElementById("chartModal");
+        modal.style.display = "none";
+      }
+
+      function showModal() {
+        var modal = document.getElementById("chartModal");
+        modal.style.display = "";
+
+        
+        var labels =/*[[${tps}]]*/ [];
+        var notes = /*[[${notes}]]*/ [];
+        const data = {
+          labels: labels,
+          datasets: [
+            {
+              label: "Notes du TPs",
+              data: notes,
+              fill: false,
+              borderColor: "#FF69B4",
+              tension: 0.1,
+            },
+          ],
+        };
+
+        const ctx = document.getElementById("myChart").getContext("2d");
+        new Chart(ctx, {
+          type: "line",
+          data: data,
+          options: {
+            scales: {
+              y: {
+                min: 0,
+                max: 20,
+              },
+            },
+            animation: {
+              duration: 4000,
+              easing: "easeInOutQuart",
+            },
+          },
+        });
+      }
+    </script>
+  </body>
 </html>
